Archive2/5d/06bb96b49b1f5c/output
main.cpp:13:16: error: default initialization of an object of const type 'const AClass' requires a user-provided default constructor
  const AClass a;
               ^
1 error generated.
